Changes to be committed: 	modified:   .github/dependabot.yml 	modified:   .github/workflows/build.yml 	deleted:    .github/workflows/build.yml_old 	new file:   .github/workflows/update_questions.yml 	modified:   .github/workflows/web_deploy.yml 	deleted:    .github/workflows/web_deploy.yml_old 	modified:   CHANGELOG.md 	modified:   android/app/src/main/AndroidManifest.xml 	new file:   android/app/src/main/res/drawable-v31/launch_background.xml 	modified:   android/app/src/main/res/drawable/launch_background.xml 	new file:   android/app/src/main/res/values-night/colors.xml 	new file:   android/app/src/main/res/values/colors.xml 	modified:   android/app/src/main/res/values/styles.xml 	renamed:    assets/icon.png -> assets/icon/icon.png 	new file:   assets/icon/launch_image.png 	new file:   assets/questions.json 	modified:   lib/data/question_categories.dart 	modified:   lib/data/questions.dart 	modified:   lib/main.dart 	deleted:    lib/main.dart_old 	modified:   lib/models/question_model.dart 	new file:   lib/models/question_model.freezed.dart 	new file:   lib/models/question_model.g.dart 	modified:   lib/screens/category_detail_screen.dart 	deleted:    lib/screens/category_detail_screen.dart_old 	modified:   lib/screens/category_learning_screen.dart 	deleted:    lib/screens/category_learning_screen.dart_old 	modified:   lib/screens/dashboard_screen.dart 	deleted:    lib/screens/dashboard_screen.dart_old 	modified:   lib/screens/quiz_screen.dart 	deleted:    lib/screens/quiz_screen.dart_old 	modified:   lib/screens/settings_screen.dart 	deleted:    lib/screens/settings_screen.dart_old 	modified:   lib/screens/single_question_screen.dart 	deleted:    lib/screens/single_question_screen.dart_old 	modified:   lib/storage/progress_dashboard.dart 	modified:   lib/storage/progress_storage.dart 	modified:   lib/theme/theme_notifier.dart 	deleted:    lib/theme/theme_notifier.dart_old 	modified:   lib/widgets/global_progress_card.dart 	deleted:    lib/widgets/global_progress_c

--- a/android/app/src/main/res/drawable-v31/launch_background.xml
+++ b/android/app/src/main/res/drawable-v31/launch_background.xml
@@ -3,10 +3,10 @@
     <!-- Hintergrundfarbe (anpassbar für Light/Dark-Modus) -->
     <item android:drawable="?attr/colorBackground" />
 
-    <!-- Zentriertes Splash-Bild -->
+    <!-- Adaptives Icon für Splash-Screen -->
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/launch_image" />
+            android:src="@mipmap/ic_launcher_adaptive_foreground" />
     </item>
 </layer-list>
